--- a/nowPlaying.html
+++ b/nowPlaying.html
@@ -17,7 +17,7 @@ pre {
 </head>
 <body>
 <script language="javascript" type="text/javascript">
-  var ws = new WebSocket('ws://xios.amato.tk:9090/jsonrpc');
+  var ws = new WebSocket('ws://192.168.1.99:9090/jsonrpc');
   ws.onopen = function (event) {
   	send_message("Player.GetActivePlayers");
   }
