--- a/nowPlaying.html
+++ b/nowPlaying.html
@@ -30,47 +30,48 @@
     ws.onmessage = function (event) {
         var j = JSON.parse(event.data);
 
-        if (j.id) {
-            switch (j.id) {
-                case "Player.GetActivePlayers":
-                    var r = j.result[0];
-                    if (r["type"] == 'video') {
-                        send_message("Player.GetItem", {
-                            "properties": ["file", "streamdetails"],
-                            "playerid": r.playerid,
-                        });
-                    }
-                    break;
-                case "Player.GetItem":
-                    var r = j.result.item;
-                    document.getElementById("name").innerHTML = "<h1>VIDEO PLAYING</h1><p><span>Name: </span>" + r.label + "</p>";
-                    document.getElementById("file").innerHTML = "<p><span>File: </span>" + r.file + "</p>";
-                    var v = r.streamdetails.video[0];
-                    document.getElementById("details").innerHTML = "<pre>" + JSON.stringify(r) + "</pre>";
-                    console.log("details: ", v);
-                    //document.getElementById("details").innerHTML = v.width + 'x' + v.height + ', ' + v.duration + 's';
-                    break;
-                default:
-                    alert(event.data);
-            }
-        } else {
-            switch (j.method) {
-                case "Player.OnPlay":
-                    send_message("Player.GetActivePlayers");
-                    break;
-                case "Player.OnStop":
-                    document.getElementById("name").innerHTML = "<h1>VIDEO STOPPED</h1>";
-                    document.getElementById("file").innerHTML = "";
-                    document.getElementById("details").innerHTML = "";
-                    break;
-                case "Player.OnPause":
-                    document.getElementById("name").innerHTML = "<h1>VIDEO PAUSED</h1>";
-                    document.getElementById("file").innerHTML = "";
-                    document.getElementById("details").innerHTML = "";
+        if (!j.id) return false;
 
-                default:
-                    console.log("EVENT: ", event.data);
-            }
+        switch (j.id) {
+            case "Player.GetActivePlayers":
+
+                var r = j.result[0];
+                if (r && r.type  == 'video') {
+                    send_message("Player.GetItem", {
+                        "properties": ["file", "streamdetails"],
+                        "playerid": r.playerid,
+                    });
+                }
+                break;
+            case "Player.GetItem":
+                var r = j.result.item;
+                document.getElementById("name").innerHTML = "<h1>VIDEO PLAYING</h1><p><span>Name: </span>" + r.label + "</p>";
+                document.getElementById("file").innerHTML = "<p><span>File: </span>" + r.file + "</p>";
+                var v = r.streamdetails.video[0];
+                document.getElementById("details").innerHTML = "<pre>" + JSON.stringify(r) + "</pre>";
+                console.log("details: ", v);
+                //document.getElementById("details").innerHTML = v.width + 'x' + v.height + ', ' + v.duration + 's';
+                break;
+            default:
+                alert(event.data);
+        }
+    } else {
+        switch (j.method) {
+            case "Player.OnPlay":
+                send_message("Player.GetActivePlayers");
+                break;
+            case "Player.OnStop":
+                document.getElementById("name").innerHTML = "<h1>VIDEO STOPPED</h1>";
+                document.getElementById("file").innerHTML = "";
+                document.getElementById("details").innerHTML = "";
+                break;
+            case "Player.OnPause":
+                document.getElementById("name").innerHTML = "<h1>VIDEO PAUSED</h1>";
+                document.getElementById("file").innerHTML = "";
+                document.getElementById("details").innerHTML = "";
+
+            default:
+                console.log("EVENT: ", event.data);
         }
     }
 
