--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                         </div>
                         <div class="well well-sm clearfix text-center">
                             <button class="btn btn-default homeButton pull-left" type="button"><i class="fa fa-home fa-2x"></i></button>
+                            <button class="btn btn-default settingsButton" type="button"><i class="fa fa-gear fa-2x"></i></button>
                             <button class="btn btn-default infoButton" type="button"><i class="fa fa-info fa-2x"></i></button>
-                            <button class="btn btn-default fullscreenButton pull-right" type="button"><i class="fa fa-arrows-alt fa-2x"></i></button>
+                            <button class="btn btn-default fullscreenButton" type="button"><i class="fa fa-arrows-alt fa-2x"></i></button>
                         </div>
                     </div>
                     <div role="tabpanel" class="tab-pane" id="remote">
